@@ -1,20 +1,24 @@
 package frc.robot.subsystems.ramp;
 
-import com.ctre.phoenix6.hardware.TalonFX;
-
-import edu.wpi.first.math.controller.PIDController;
 import static edu.wpi.first.units.Units.Radians;
 import static edu.wpi.first.units.Units.Rotations;
+
+import com.ctre.phoenix6.hardware.TalonFX;
+import edu.wpi.first.math.controller.PIDController;
 import frc.robot.constants.JsonConstants;
 
 // TODO make pid constants
 public class RampIOTalonFX implements RampIO {
 
-  private final PIDController controller = new PIDController(7.5, 0.001, 0.0);
+  private final PIDController controller =
+      new PIDController(
+          JsonConstants.rampConstants.PID_TalonFX_P,
+          JsonConstants.rampConstants.PID_TalonFX_I,
+          JsonConstants.rampConstants.PID_TalonFX_D);
 
   private TalonFX talon;
 
-  public RampIOTalonFX(){
+  public RampIOTalonFX() {
     talon = new TalonFX(JsonConstants.rampConstants.motorId);
   }
 
@@ -27,7 +31,7 @@ public class RampIOTalonFX implements RampIO {
   public void updateOutputs(RampInputs inputs, RampOutputs outputs) {
     controller.setSetpoint(outputs.targetPosition);
     double volts = controller.calculate(inputs.position);
-    volts = Math.clamp(volts, -12.0, 12.0);
+    volts = Math.min(Math.max(volts, -12.0), 12.0);
     outputs.appliedVolts = volts;
     talon.setVoltage(volts);
   }
